internal/xds/translator/testdata/out/xds-ir/api-key-auth.routes.yaml
- ignorePortInHostMatching: true
  name: default/gateway-1/http
  virtualHosts:
  - domains:
    - www.foo.com
    name: default/gateway-1/http/www_foo_com
    routes:
    - match:
        pathSeparatedPrefix: /foo1
      name: httproute/default/httproute-1/rule/0/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.api_key_auth:
          '@type': type.googleapis.com/envoy.extensions.filters.http.api_key_auth.v3.ApiKeyAuthPerRoute
          allowedClients:
          - client-1
          credentials:
          - client: client-1
            key: key1
          keySources:
          - header: X-API-KEY
    - match:
        pathSeparatedPrefix: /foo2
      name: httproute/default/httproute-1/rule/1/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-1/rule/1
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.api_key_auth:
          '@type': type.googleapis.com/envoy.extensions.filters.http.api_key_auth.v3.ApiKeyAuthPerRoute
          allowedClients:
          - client-2
          credentials:
          - client: client-2
            key: key2
          keySources:
          - queryParams: X-API-KEY
  - domains:
    - www.bar.com
    name: default/gateway-1/http/www_bar_com
    routes:
    - match:
        pathSeparatedPrefix: /bar
      name: httproute/default/httproute-2/rule/0/match/0/www_bar_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.api_key_auth:
          '@type': type.googleapis.com/envoy.extensions.filters.http.api_key_auth.v3.ApiKeyAuthPerRoute
          allowedClients:
          - client-3
          credentials:
          - client: client-3
            key: key3
          keySources:
          - cookie: X-API-KEY
